kubernetes/skywalker/media/tdarr/tdarr.deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tdarr
  namespace: media
  labels:
    app.kubernetes.io/instance: tdarr
    app.kubernetes.io/name: tdarr


spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: tdarr
      app.kubernetes.io/name: tdarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tdarr
        app.kubernetes.io/name: tdarr
    spec:
      containers: 
        - name: tdarr
          image: 'ghcr.io/haveagitgat/tdarr:latest'
          ports:
            - containerPort: 8265
              name: http
          livenessProbe:
            tcpSocket:
              port: 8265
          readinessProbe:
            tcpSocket:
              port: 8265
          startupProbe:
            tcpSocket:
              port: 8265
