kubernetes/skywalker/media/tdarr/tdarr.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: tdarr

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - tdarr.feldman.in
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: tdarr
            port:
              number: 8265
